--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section id="product-image">
-            <img src="Ultraglow-Round-PhotoRoom.jpg.webp">
+            <img src="C:\Users\johnp\OneDrive\Desktop\New folder\product\Ultraglow-Round-PhotoRoom.jpg.webp">
             <h1>Philips Ultra Glow 3-in-1 LED Downlight-The Philips Ultra Glow 3-in-1 LED Downlight</h1>
             <section id="product-description" class="Description">
                 <h2>Description</h2>
